the_project/manifests-gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
