the_project/manifests-gke/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: the-project-route
  namespace: project
spec:
  parentRefs:
  - name: the-project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-backend-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: the-project-svc
      port: 80
